--- a/index.html
+++ b/index.html
@@ -181,9 +181,10 @@
         <!-- Left half of the screen -->
         <div class="col-md-7">
 
-          <!-- Upper tile -->
+          <!-- Workflow section -->
           <div class="row row-no-padding">
             <div class="col-md-12">
+
               <section id="workflow">
                 <div class="row row-no-padding heading">
                   <div class="col-md-8">
@@ -230,12 +231,14 @@
                   </div>
                 </div>
               </section>
+
             </div>
           </div>
 
-          <!-- Lower tile -->
+          <!-- Events section -->
           <div class="row row-no-padding">
             <div class="col-md-12">
+
               <section id="events">
                 <div class="row">
                   <div class="col-md-8">
@@ -281,15 +284,18 @@
                   </div>
                 </div>
               </section>
+
             </div>
           </div>
         </div>
 
-
         <!-- Right half of the screen -->
         <div class="col-md-5">
+
+          <!-- Birthdays section -->
           <div class="row row-no-padding">
             <div class="col-md-5">
+
               <section id="birthdays">
                 <div class="row">
                   <div class="col-md-12">
@@ -320,9 +326,12 @@
                   </div>
                 </div>
               </section>
+
             </div>
 
+            <!-- notifications section -->
             <div class="col-md-7">
+
               <section id="notifications">
                 <div class="row">
                   <div class="col-md-12">
@@ -358,9 +367,11 @@
                   </div>
                 </div>
               </section>
+
             </div>
           </div>
 
+          <!-- News section -->
           <div class="row row-no-padding">
             <div class="col-md-12">
 
@@ -408,36 +419,43 @@
             </div>
           </div>
 
+          <!-- Links section -->
           <div class="row row-no-padding">
-            <div class="col-md-3">
-              <div class="ph">
-                <a href="#"><img src="images/torelik.png"></a>
-                <p>ТОРЕЛИК</p>
+
+            <section id="links">
+              <div class="col-md-3">
+                <div class="tile">
+                  <a href="#"><img src="images/torelik.png"></a>
+                  <p>ТОРЕЛИК</p>
+                </div>
               </div>
-            </div>
-            <div class="col-md-3">
-              <div class="ph">
-                <a href="#"><img src="images/e-arh.png"></a>
-                <p>Е-АРХИВ</p>
+              <div class="col-md-3">
+                <div class="tile">
+                  <a href="#"><img src="images/e-arh.png"></a>
+                  <p>Е-АРХИВ</p>
+                </div>
               </div>
-            </div>
-            <div class="col-md-3">
-              <div class="ph">
-                <a href="#"><img src="images/e-kad.png"></a>
-                <p>Е-КАДРЫ</p>
+              <div class="col-md-3">
+                <div class="tile">
+                  <a href="#"><img src="images/e-kad.png"></a>
+                  <p>Е-КАДРЫ</p>
+                </div>
               </div>
-            </div>
-            <div class="col-md-3">
-              <div class="ph">
-                <a href="#"><img src="images/avf.png"></a>
-                <p>АВФ</p>
+              <div class="col-md-3">
+                <div class="tile">
+                  <a href="#"><img src="images/avf.png"></a>
+                  <p>АВФ</p>
+                </div>
               </div>
-            </div>
+            </section>
+
           </div>
 
+          <!-- Absent section -->
           <div class="row row-no-padding">
             <div class="col-md-12">
-              <div class="otsu">
+
+              <section id="absent">
                 <div class="row">
                   <div class="col-md-12 text-left">
                     <h3>Отсутствующие</h3>
@@ -451,36 +469,26 @@
                     <a href="#">Показать всех</a>
                   </div>
                 </div>
-              </div>
+              </section>
             </div>
           </div>
 
-        </div>
-        <div class="row carousel">
-          <!--
-<div class="col-md-1 text-right">
-<div class="caret-left"></div>
-</div>
--->
-          <div class="col-md-11 text-right">
-            <div id="footer-carousel" class="owl-carousel">
-              <div><img src="images/slide1.jpg"></div>
-              <div><img src="images/slide2.jpg"></div>
-              <div><img src="images/slide3.jpg"></div>
-              <div><img src="images/slide4.jpg"></div>
-              <div><img src="images/slide5.jpg"></div>
-              <div><img src="images/slide5.jpg"></div>
-              <div><img src="images/slide5.jpg"></div>
-            </div>
-          </div>
-          <!--
-<div class="col-md-1 text-left">
-<div class="caret-right"></div>
-</div>
--->
         </div>
       </div>
 
+      <div class="row row-no-padding carousel">
+        <div class="col-md-11 text-right">
+          <div id="footer-carousel" class="owl-carousel">
+            <div><img src="images/slide1.jpg"></div>
+            <div><img src="images/slide2.jpg"></div>
+            <div><img src="images/slide3.jpg"></div>
+            <div><img src="images/slide4.jpg"></div>
+            <div><img src="images/slide5.jpg"></div>
+            <div><img src="images/slide5.jpg"></div>
+            <div><img src="images/slide5.jpg"></div>
+          </div>
+        </div>
+      </div>
 
     </div>
 
