--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </ul>
           </li>
           <li><a href="#"><span class="divider"></span></a></li>
-          <li><a href="#"><i class="icon-speech"></i></a></li>
+          <li><a href="#" class="js-toggle-chat"><i class="icon-speech"></i></a></li>
         </ul>
       </div>
     </nav>
@@ -123,7 +123,7 @@
                 <h3 class="panel-title">Чат</h3>
               </div>
               <div class="col-md-4 text-right">
-                <a href="#"><i class="icon-close"></i></a>
+                <a href="#" class="js-toggle-chat"><i class="icon-close"></i></a>
               </div>
             </div>
             <div class="row row-no-padding sub-bar">
@@ -475,23 +475,19 @@
         </div>
       </div>
 
-      <div class="row row-no-padding">
-        <div class="col-md-12">
-          <div class="carousel text-center">
-<!--            <img class="arrow" src="images/arrow-left.png" alt="">-->
-
-            <div id="footer-carousel" class="owl-carousel">
-              <div><img src="images/slide1.jpg"></div>
-              <div><img src="images/slide2.jpg"></div>
-              <div><img src="images/slide3.jpg"></div>
-              <div><img src="images/slide4.jpg"></div>
-              <div><img src="images/slide5.jpg"></div>
-            </div>
-
-<!--            <img class="arrow" src="images/arrow-right.png" alt="">-->
-          </div>
-        </div>
-      </div>
+      <!--<div class="row row-no-padding">
+<div class="col-md-12">
+<div class="carousel text-center">
+<div id="footer-carousel" class="owl-carousel">
+<div><img src="images/slide1.jpg"></div>
+<div><img src="images/slide2.jpg"></div>
+<div><img src="images/slide3.jpg"></div>
+<div><img src="images/slide4.jpg"></div>
+<div><img src="images/slide5.jpg"></div>
+</div>
+</div>
+</div>
+</div> -->
 
     </div>
 
@@ -540,6 +536,17 @@ $(document).ready(function() {
           });
         }
         return false;
+      });
+    });
+
+  }).call(this);
+
+  (function() {
+    $(function() {
+
+      return $(".js-toggle-chat").click(function() {
+        console.log('test');
+        return $(".chat-container").toggle();
       });
     });
 
