--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!--chat-->
     <div class="chat-container">
-      <div class="row-no-padding chat-window col-md-12">
+      <div class="row chat-window col-md-12">
         <div class="col-md-12">
           <div class="panel panel-chat">
             <div class="top-bar">
