--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@
                     <h3>Новости</h3>
                   </div>
 
-                  <div class="col-md-6 text-right">
+                  <div class="col-md-6">
                     <ul class="iconbar">
-                      <li><a href="#"><i class="icon-home"></i></a></li>
+                      <li class="icon0"><a href="#"></a></li>
                       <li><a href="#"><i class="icon-home"></i></a></li>
                       <li><a href="#"><i class="icon-home"></i></a></li>
                       <li><a href="#"><i class="icon-home"></i></a></li>
@@ -560,7 +560,7 @@ $(document).ready(function() {
     changeChatHeight = function() {
       $('.chat-container').css('height', viewPortHeight);
       $('.chat-window').css('height', viewPortHeight);
-      $('.panel-chat').css('height', viewPortHeight - $('.top-bar').height() - $('.sub-bar').height() - $('.panel-footer').height() - 65);
+      $('.panel-chat').css('height', viewPortHeight - $('.top-bar').height() - $('.sub-bar').height() - $('.panel-footer').height() - 63);
     };
 
     changeChatHeight();
