--- a/index.html
+++ b/index.html
@@ -569,23 +569,30 @@ $(document).ready(function() {
     });
   }).call(this);
 
+  (function() {
+
+    return $('.toggle-date-range li').click(function() {
+      $(this).addClass('active').siblings().removeClass('active');
+    });
+  }).call(this);
+
   $("#birthdays-carousel").owlCarousel({
-    navigation: false,
+    navigation: true,
     pagination: false,
     navigationText: [
-      '<i class="fa fa-angle-left"></i>',
-      '<i class="fa fa-angle-right"></i>'
+      '<i class="icon-chevron-left icon-white"><</i>',
+      '<i class="icon-chevron-right icon-white">></i>'
     ],
     items: 1
   });
 
   $("#footer-carousel").owlCarousel({
     navigation: true,
+    pagination: false,
     navigationText: [
       '<i class="icon-chevron-left icon-white"><</i>',
-      '<i class="icon-chevron-right icon-white"><</i>'
+      '<i class="icon-chevron-right icon-white">></i>'
     ],
-    pagination: false,
     items: 5
   });
 
