--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                 <div class="row">
                   <div class="col-md-9 article-border">
                   </div>
-                  <div class="col-md-3 more">
+                  <div class="col-md-3 more text-right">
                     <a href="#">Подробнее</a>
                   </div>
                 </div>
