--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
                   </div>
 
                   <div class="col-md-6">
-                    <ul class="iconbar">
-                      <li class="icon0"><a href="#"></a></li>
+                    <ul class="iconbar text-right">
+                      <li><a href="#"><i class="icon-home"></i></a></li>
                       <li><a href="#"><i class="icon-home"></i></a></li>
                       <li><a href="#"><i class="icon-home"></i></a></li>
                       <li><a href="#"><i class="icon-home"></i></a></li>
